Overflow issue resolved
Impact tools links working

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -221,6 +221,7 @@ body {
 	border-radius: 5px;
 	margin-top: 5px;
 	margin-bottom: 5px;
+	overflow: auto;
 }
 #content {
 	height: 600px;
